--- a/about/index.html
+++ b/about/index.html
@@ -23,8 +23,8 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" type="text/css" href="/style.css" />
-    <link rel="alternate" type="application/rss+xml" title="Tim McMackin - Technical and professional writer, content devleopment team lead, kite flier" href="/feed.xml" />
+    <link rel="stylesheet" type="text/css" href="/jekyll-now/style.css" />
+    <link rel="alternate" type="application/rss+xml" title="Tim McMackin - Technical and professional writer, content devleopment team lead, kite flier" href="/jekyll-now/feed.xml" />
 
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
@@ -33,16 +33,16 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="/" class="site-avatar"><img src="https://raw.githubusercontent.com/timothymcmackin/jekyll-now/master/images/Tim_McMackin_garage_method_expert.jpg" /></a>
+          <a href="/jekyll-now/" class="site-avatar"><img src="https://raw.githubusercontent.com/timothymcmackin/jekyll-now/master/images/Tim_McMackin_garage_method_expert.jpg" /></a>
 
           <div class="site-info">
-            <h1 class="site-name"><a href="/">Tim McMackin</a></h1>
+            <h1 class="site-name"><a href="/jekyll-now/">Tim McMackin</a></h1>
             <p class="site-description">Technical and professional writer, content devleopment team lead, kite flier</p>
           </div>
 
           <nav>
-            <a href="/">Blog</a>
-            <a href="/about">About</a>
+            <a href="/jekyll-now/">Blog</a>
+            <a href="/jekyll-now/about">About</a>
           </nav>
         </header>
       </div>
